<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.sinfonica</groupId>
    <artifactId>inclusive-cccam</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <matsim.version>16.0-PR3108</matsim.version>
    </properties>


    <repositories>
        <repository>
            <id>matsim</id>
            <url>https://repo.matsim.org/repository/matsim</url>
        </repository>
        <repository>
            <id>irtx-gitlab</id>
            <url>https://git.irt-systemx.fr/api/v4/projects/5623/packages/maven</url>
        </repository>
    </repositories>


    <dependencies>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.8.0</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-csv</artifactId>
            <version>2.12.6</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>2.12.6</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.12.7.1</version>
        </dependency>

        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.7</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-math3</artifactId>
            <version>3.6.1</version>
        </dependency>

        <dependency>
            <groupId>org.matsim</groupId>
            <artifactId>matsim</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>drt</artifactId>
            <version>${matsim.version}</version>
        </dependency>

        <dependency>
            <groupId>org.matsim.contrib</groupId>
            <artifactId>drt-extensions</artifactId>
            <version>${matsim.version}</version>
        </dependency>
        
        <dependency>
            <groupId>org.matsim.alonso-mora</groupId>
            <artifactId>core</artifactId>
            <version>1.0.0-irtx-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>32.1.1-jre</version>
        </dependency>
    </dependencies>


    <profiles>
        <profile>
            <id>standalone</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-shade-plugin</artifactId>
                        <version>3.2.0</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>shade</goal>
                                </goals>
                                <configuration>
                                    <transformers>
                                        <transformer
                                                implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                        <transformer
                                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                            <manifestEntries>
                                                <Main-Class>com.conveyal.r5.R5Main</Main-Class>
                                                <Specification-Title>Java Advanced Imaging Image I/O Tools</Specification-Title>
                                                <Specification-Version>1.1</Specification-Version>
                                                <Specification-Vendor>Sun Microsystems, Inc.</Specification-Vendor>
                                                <Implementation-Title>com.sun.media.imageio</Implementation-Title>
                                                <Implementation-Version>1.1</Implementation-Version>
                                                <Implementation-Vendor>Sun Microsystems, Inc.</Implementation-Vendor>
                                                <Extension-Name>com.sun.media.imageio</Extension-Name>
                                            </manifestEntries>
                                        </transformer>
                                    </transformers>
                                    <filters>
                                        <filter>
                                            <artifact>*:*</artifact>
                                            <excludes>
                                                <exclude>META-INF/*.SF</exclude>
                                                <exclude>META-INF/*.DSA</exclude>
                                                <exclude>META-INF/*.RSA</exclude>
                                            </excludes>
                                        </filter>
                                    </filters>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>